--- a/app/index.html
+++ b/app/index.html
@@ -18,59 +18,10 @@
   </head>
   <body ng-controller="AppController">
 	<ons-sliding-menu
-		  main-page="page1.html"
-		  menu-page="menu.html"
+		  main-page="components/matches/view.html"
+		  menu-page="components/common/menu.html"
 		  side="left"
 		  var="menu">
 	</ons-sliding-menu>
-
-<script type="text/ons-template" id="page1.html">
-  <ons-page>
-    <ons-toolbar>
-      <div class="left">
-        <ons-toolbar-button ng-click="menu.toggleMenu()"><ons-icon icon="fa-bars"></ons-icon></ons-toolbar-button>
-      </div>
-      <div class="center">Page 1</div>
-    </ons-toolbar>
-    <h1 style="text-align: center">Page1</h1>
-  </ons-page>
-</script>
-
-<script type="text/ons-template" id="page2.html">
-  <ons-page>
-    <ons-toolbar>
-      <div class="left">
-        <ons-toolbar-button  onclick="menu.toggleMenu()"><ons-icon icon="fa-bars"></ons-icon></ons-toolbar-button>
-      </div>
-      <div class="center">Page 2</div>
-    </ons-toolbar>
-
-    <h1 style="text-align: center">Page2</h1>
-		<ons-navigator title="Navigator" var="myNavigator">
-			<ons-page>
-			  <div id="my-content">some stuff here</div>
-			  <ons-button  modifier="light" onclick="myNavigator.pushPage('page3.html')">Next Page</ons-button>
-			</ons-page>
-		</ons-navigator>
-	</ons-page>
-</script>
-
-<script type="text/ons-template" id="page3.html">
-  <ons-page>
-    <h1 style="text-align: center">Page 3</h1>
-			  <ons-button modifier="light" onclick="myNavigator.popPage()">back</ons-button>
-  </ons-page>
-</script>
-
-<script type="text/ons-template" id="menu.html">
-  <ons-list>
-    <ons-list-item modifier="chevron" onclick="menu.setMainPage('page1.html', {closeMenu: true})">
-      page1.html
-    </ons-list-item>
-    <ons-list-item modifier="chevron" onclick="menu.setMainPage('page2.html', {closeMenu: true})">
-      page2.html
-    </ons-list-item>
-  </ons-list>
-</script>
   </body>
 </html>
