--- a/app/www/index.html
+++ b/app/www/index.html
@@ -4,11 +4,8 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="bower_components/OnsenUI/css/onsenui.css"/>
     <link rel="stylesheet" href="bower_components/OnsenUI/css/onsen-css-components.css"/>
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/OnsenUI/js/onsenui.js"></script>
-    <script src="app.js"></script>
   </head>
-  <body ng-controller="AppController">
+  <body>
     <ons-sliding-menu
             menu-page="components/common/menu.html"
             side="left"
@@ -18,5 +15,18 @@
                 <ons-navigator title="Navigator" var="myNavigator" page="components/matches/view.html"></ons-navigator>
             </div>
     </ons-sliding-menu>
+
+    <!-- bower libs-->
+    <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-route/angular-route.min.js"></script>
+    <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
+    <script src="bower_components/angular-animate/angular-animate.min.js"></script>
+    <script src="bower_components/angular-touch/angular-touch.min.js"></script>
+    <script src="bower_components/OnsenUI/js/onsenui.js"></script>
+
+    <!-- app files-->
+    <script src="app.js"></script>
+    <script src="controllers.js"></script>
+    <script src="services.js"></script>
   </body>
 </html>
