--- a/app/www/index.html
+++ b/app/www/index.html
@@ -10,9 +10,10 @@
             menu-page="components/common/menu.html"
             side="left"
             max-slide-distance="250px"
+            main-page="components/matches/main.html"
             var="menu">
             <div class="main">
-                <ons-navigator title="Navigator" var="myNavigator" page="components/matches/view.html"></ons-navigator>
+
             </div>
     </ons-sliding-menu>
 
