--- a/app/www/index.html
+++ b/app/www/index.html
@@ -2,32 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="bower_components/OnsenUI/css/onsenui.css"/>
-    <link rel="stylesheet" href="bower_components/OnsenUI/css/onsen-css-components.css"/>
+    <link rel="stylesheet" href="node_modules/OnsenUI/css/onsenui.css"/>
+    <link rel="stylesheet" href="node_modules/OnsenUI/css/onsen-css-components.css"/>
+    <style>
+      ons-splitter-side[side="left"] {
+        border-right: 1px solid #ddd;
+      }
+      ons-splitter-side[side="right"] {
+        border-left: 1px solid #ddd;
+      }
+    </style>
   </head>
-  <body>
-    <ons-sliding-menu
-            menu-page="components/common/menu.html"
-            side="left"
-            max-slide-distance="250px"
-            main-page="components/matches/main.html"
-            var="menu">
-            <div class="main">
+  <body ng-controller="PageController">
+    <ons-navigator var="pageNavigator" page="components/common/splitter.html">
+    </ons-navigator>
 
-            </div>
-    </ons-sliding-menu>
+  <!-- bower libs-->
+  <script src="bower_components/angular/angular.js"></script>
+  <script src="bower_components/angular-route/angular-route.min.js"></script>
+  <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
+  <script src="bower_components/angular-animate/angular-animate.min.js"></script>
+  <script src="bower_components/angular-touch/angular-touch.min.js"></script>
+  <script src="node_modules/OnsenUI/js/onsenui.js"></script>
+  <script src="node_modules/OnsenUI/js/angular-onsenui.js"></script>
 
-    <!-- bower libs-->
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-route/angular-route.min.js"></script>
-    <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
-    <script src="bower_components/angular-animate/angular-animate.min.js"></script>
-    <script src="bower_components/angular-touch/angular-touch.min.js"></script>
-    <script src="bower_components/OnsenUI/js/onsenui.js"></script>
-
-    <!-- app files-->
-    <script src="app.js"></script>
-    <script src="controllers.js"></script>
-    <script src="services.js"></script>
+  <!-- app files-->
+  <script src="app.js"></script>
+  <script src="controllers.js"></script>
+  <script src="services.js"></script>
   </body>
 </html>
