updated login page to new format

--- a/predictable-app/www/index.html
+++ b/predictable-app/www/index.html
@@ -42,7 +42,7 @@
 </head>
 
 <body ng-controller="PageController">
-    <ons-navigator var="pageNavigator" page="components/common/splitter.html">
+    <ons-navigator var="pageNavigator" page="components/common/login.html">
     </ons-navigator>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/phonegap.js"></script>
