start of client side oauth implementation

--- a/predictable-app/www/index.html
+++ b/predictable-app/www/index.html
@@ -45,17 +45,18 @@
     <ons-navigator var="pageNavigator" page="components/common/login.html">
     </ons-navigator>
     <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="js/phonegap.js"></script>
-    <script type="text/javascript">
-        phonegapApp.initialize();
-    </script>
 	
-	<!-- bower libs-->
+	<!-- bower files-->
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.min.js"></script>
   <script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
   <script src="bower_components/angular-animate/angular-animate.min.js"></script>
   <script src="bower_components/angular-touch/angular-touch.min.js"></script>
+  <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
+  <script src="bower_components/query-string/query-string.js"></script>
+  <script src="bower_components/angular-oauth2/dist/angular-oauth2.min.js"></script>
+
+    <!-- Onsenui 2 files--->
   <script src="lib/OnsenUI/js/onsenui.js"></script>
   <script src="lib/OnsenUI/js/angular-onsenui.js"></script>
 
